fix dicepool being too wide

--- a/docs/css/main.css
+++ b/docs/css/main.css
@@ -20,6 +20,7 @@
 
 .dicepool {
     grid-row-start: 1;
+    width: min-content;
 }
 
 .game {
